src/objects/MediaElementAssignment__c.object
<CustomObject>
    <description>Holds the relationship between each media element and the Contents it is beeing used on. This relationship can also be categorized</description>
    <fields>
        <fullName>Content__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Content</label>
        <referenceTo>Content__c</referenceTo>
        <relationshipLabel>Media Element Assignments</relationshipLabel>
        <relationshipName>MediaElementAssignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Extensions__c</fullName>
        <label>Extensions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>png</fullName>
                </value>
                <value>
                    <fullName>jpeg</fullName>
                </value>
                <value>
                    <fullName>jpg</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <inlineHelpText>The media element associated with this records, must have the same height as specified on this field</inlineHelpText>
        <label>Height</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ImageOrder__c</fullName>
        <label>Image Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MediaElement__c</fullName>
        <label>Media Element</label>
        <referenceTo>MediaElement__c</referenceTo>
        <relationshipLabel>Media Element Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Placement__c</fullName>
        <label>Placement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Width__c</fullName>
        <label>Width</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Media Element Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MA-{0000}</displayFormat>
        <label>Media Element Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Media Element Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>